// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleByline tests on web 1. single inline element 1`] = `
<div>
  <div>
    Lindsay McIntosh Scottish Political Editor
  </div>
</div>
`;

exports[`ArticleByline tests on web 2. with the author in the begining 1`] = `
<div>
  <div>
    Camilla Long
  </div>
  <div>
    , Environment Editor
  </div>
</div>
`;

exports[`ArticleByline tests on web 3. with the author at the end 1`] = `
<div>
  <div>
    RBS Six Nations 
  </div>
  <div>
    Mike Atherton
  </div>
</div>
`;

exports[`ArticleByline tests on web 4. with multiple authors separated by text with commas 1`] = `
<div>
  <div>
    Camilla Long
  </div>
  <div>
    , 
  </div>
  <div>
    Mike Atherton
  </div>
  <div>
    , 
  </div>
  <div>
    Alexandra Frean
  </div>
</div>
`;

exports[`ArticleByline tests on web 5. with multiple authors separated by spaces 1`] = `
<div>
  <div>
    Camilla Long
  </div>
  <div>
     
  </div>
  <div>
    Mike Atherton
  </div>
  <div>
     
  </div>
  <div>
    Alexandra Frean
  </div>
</div>
`;

exports[`ArticleByline tests on web 6. null with an empty ast 1`] = `null`;
